--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -41,47 +41,79 @@ jobs:
         run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
       - name: Show coverage
         run: go tool cover -func=c.out
-  e2e-test:
-    name: E2E Test
+  e2e-test-fs:
+    name: E2E Test - File System
     runs-on: ubuntu-latest
     env:
       CI: true
-      TEST_REPORTS_DIR: ./playwright-reports
+      TEST_REPORTS_DIR: ./playwright/test-reports
+      TEST_REPORT_JSON: fs-test-report.json
+      TEST_RESULTS_DIR: ./playwright/test-results/fs-results 
     steps:
       - uses: actions/checkout@v4
       - name: Install podman compse
         run: pip3 install podman-compose
       - name: Pull Images
-        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml pull
-      - name: Start Services
-        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up -d cache azurite minio
-      
-      - name: Run Tests - File System
-        run: |
-          podman-compose up -d --force-recreate upload-server
-          TEST_REPORT_JSON=fs-test-report.json TEST_RESULTS_DIR=./playwright-test-results/fs-results podman-compose -f docker-compose.e2e.yml up --force-recreate playwright --exit-code-from playwright
-      
-      - name: Run Tests - Azure
-        run: |
-          AZURE_STORAGE_KEY=${{ secrets.AZURITE_STORAGE_KEY }} podman-compose -f docker-compose.yml -f docker-compose.azurite.yml up -d --force-recreate upload-server
-          TEST_REPORT_JSON=azure-test-report.json TEST_RESULTS_DIR=./playwright-test-results/azure-results podman-compose -f docker-compose.e2e.yml up --force-recreate playwright --exit-code-from playwright
-
-      - name: Run Tests - AWS
-        run: |
-          podman-compose -f docker-compose.yml -f docker-compose.minio.yml up -d --force-recreate upload-server
-          TEST_REPORT_JSON=aws-test-report.json TEST_RESULTS_DIR=./playwright-test-results/aws-results podman-compose -f docker-compose.e2e.yml up --force-recreate playwright --exit-code-from playwright
-         
+        run: podman-compose -f docker-compose.yml -f docker-compose.e2e.yml pull
+      - name: Start Server
+        run: podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up -d cache upload-server --exit-code-from playwright
+      - name: Run Tests
+        run: podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up playwright --exit-code-from playwright
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-reports
-          path: playwright-reports/
+          name: playwright
+          path: playwright/
           retention-days: 30
+  e2e-test-azure:
+    name: E2E Test - Azure
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+      TEST_REPORTS_DIR: ./playwright/test-reports
+      TEST_REPORT_JSON: azure-test-report.json
+      TEST_RESULTS_DIR: ./playwright/test-results/azure-results 
+      AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install podman compse
+        run: pip3 install podman-compose
+      - name: Pull Images
+        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml pull
+      - name: Start Server
+        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up -d cache azurite upload-server --exit-code-from playwright
+      - name: Run Tests
+        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up playwright --exit-code-from playwright
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-test-results
-          path: playwright-test-results/
+          name: playwright
+          path: playwright/
+          retention-days: 30
+
+  e2e-test-aws:
+    name: E2E Test - AWS
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+      TEST_REPORTS_DIR: ./playwright/test-reports
+      TEST_REPORT_JSON: aws-test-report.json
+      TEST_RESULTS_DIR: ./playwright/test-results/aws-results
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install podman compse
+        run: pip3 install podman-compose
+      - name: Pull Images
+        run: podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml pull
+      - name: Start Server
+        run: podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up -d cache minio upload-server --exit-code-from playwright
+      - name: Run Tests - AWS
+        run: podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up playwright --exit-code-from playwright
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright
+          path: playwright/
           retention-days: 30
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
