--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -9,8 +9,8 @@ services:
     command: /bin/sh -c "npm install; ./wait-for-it.sh $$UI_URL; npm test --workers=1"
     environment:
       - CI=${CI}
-      - SERVER_URL=http://upload-server:8080
-      - UI_URL=http://upload-server:8081
+      - SERVER_URL=http://upload-server:${SERVER_PORT:-8080}
+      - UI_URL=http://upload-server:${UI_PORT:-8081}
       - TEST_REPORT_DIR=${TEST_REPORT_DIR:-./test-reports}
       - TEST_REPORT_JSON=${TEST_REPORT_JSON:-test-report.json}
       - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
