--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -45,7 +45,7 @@ jobs:
           TEST_REPORT_JSON: fs-test-report.json
           TEST_RESULTS_DIR: ./playwright/test-results/fs-results 
         run: |
-          podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up --force-recreate --no-start
+          podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up --no-start
           podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up --no-recreate --exit-code-from playwright
           podman-compose -f docker-compose.yml -f docker-compose.e2e.yml down
       - name: Run E2E Tests - Azure
@@ -54,7 +54,7 @@ jobs:
           TEST_RESULTS_DIR: ./playwright/test-results/azure-results 
           AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
         run: |
-          podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --force-recreate --no-start
+          podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --no-start
           podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --no-recreate --exit-code-from playwright
           podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml down
       - name: Run E2E Tests - AWS
@@ -62,7 +62,7 @@ jobs:
           TEST_REPORT_JSON: aws-test-report.json
           TEST_RESULTS_DIR: ./playwright/test-results/aws-results
         run: |
-          podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up --force-recreate --no-start
+          podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up --no-start
           podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up --no-recreate --exit-code-from playwright
           podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml down
       - uses: actions/upload-artifact@v4
