--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -44,27 +44,18 @@ jobs:
         env:
           TEST_REPORT_JSON: fs-test-report.json
           TEST_RESULTS_DIR: ./playwright/test-results/fs-results 
-        run: |
-          podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up -d cache upload-server
-          podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up --no-recreate playwright --exit-code-from playwright
-          podman-compose -f docker-compose.yml -f docker-compose.e2e.yml down
+        run: podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up --exit-code-from playwright
       - name: Run E2E Tests - Azure
         env:
           TEST_REPORT_JSON: azure-test-report.json
           TEST_RESULTS_DIR: ./playwright/test-results/azure-results 
           AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-        run: |
-          podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up -d azurite cache upload-server
-          podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --no-recreate playwright --exit-code-from playwright
-          podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml down
+        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --exit-code-from playwright
       - name: Run E2E Tests - AWS
         env:
           TEST_REPORT_JSON: aws-test-report.json
           TEST_RESULTS_DIR: ./playwright/test-results/aws-results
-        run: |
-          podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up -d minio cache upload-server
-          podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up --no-recreate playwright --exit-code-from playwright
-          podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml down
+        run: podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up --exit-code-from playwright
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
