--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -1,4 +1,23 @@
 services:
+  cache:
+    extends:
+      file: docker-compose.yml
+      service: cache
+    ports:
+      - 6380
+    command: redis-server --port 6380
+  upload-server:
+    extends:
+      file: docker-compose.yml
+      service: upload-server
+    environment:
+      - REDIS_CONNECTION_STRING=redis://redispw@cache:6380
+      - SERVER_HOSTNAME=upload-server
+      - SERVER_PORT=8082
+      - UI_PORT=8083
+    ports:
+      - 8082
+      - 8083
   playwright:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     volumes:
@@ -8,10 +27,9 @@ services:
     command: /bin/sh -c "npm install; ./wait-for-it.sh $$UI_URL; npm test --workers=1"
     environment:
       - CI=${CI}
-      - SERVER_URL=http://upload-server:${SERVER_PORT:-8080}
-      - UI_URL=http://upload-server:${UI_PORT:-8081}
-      - TEST_REPORT_DIR=${TEST_REPORT_DIR:-./test-reports}
-      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-test-report.json}
-      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
+      - SERVER_URL=http://upload-server:8082
+      - UI_URL=http://upload-server:8083
+      - TEST_REPORT_JSON=fs-test-report.json
+      - TEST_RESULTS_DIR=./test-results/fs-results
     depends_on:
       - upload-server
