--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -64,21 +64,21 @@ jobs:
           name: playwright
           path: playwright/
           retention-days: 30
-  simulation-test:
-    needs: e2e-tests
-    if: ${{ always() }}
-    name: Simulation Test
-    runs-on: ubuntu-latest
-    env:
-      AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install podman compose
-        run: pip3 install podman-compose
-      - name: Run Tests
-        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
-      - name: Show coverage
-        run: go tool cover -func=c.out
+  # simulation-test:
+  #   needs: e2e-tests
+  #   if: ${{ always() }}
+  #   name: Simulation Test
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Install podman compose
+  #       run: pip3 install podman-compose
+  #     - name: Run Tests
+  #       run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
+  #     - name: Show coverage
+  #       run: go tool cover -func=c.out
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
