--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -45,8 +45,7 @@ jobs:
           TEST_REPORT_JSON: fs-test-report.json
           TEST_RESULTS_DIR: ./playwright/test-results/fs-results 
         run: |
-          podman-compose -f docker-compose.e2e.yml up --remove-orphans --no-start
-          podman-compose -f docker-compose.e2e.yml up --no-recreate --no-build --exit-code-from playwright
+          podman-compose -f docker-compose.e2e.yml up --pull-always --build --remove-orphans --exit-code-from playwright
       # - name: Run E2E Tests - Azure
       #   env:
       #     TEST_REPORT_JSON: azure-test-report.json
