--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -33,15 +33,26 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: true
-      TEST_REPORTS_DIR: ./playwright/test-reports
+      TEST_REPORTS_DIR: playwright/test-reports
     steps:
       - uses: actions/checkout@v4
-      - name: Install podman compse
+      - name: Install podman compose
         run: pip3 install podman-compose
       # - name: Pull Images
       #   run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml pull
       - name: Run E2E Tests - File System
-        run: podman-compose -f docker-compose.e2e.yml up --pull-always --remove-orphans --force-recreate --build --exit-code-from playwright
+        env:
+          TEST_RESULTS_DIR: playwright/test-results/fs-results
+        run: podman-compose -f docker-compose.e2e.yml up --pull-always --force-recreate --build --exit-code-from playwright
+      - name: Tear Down - File System
+        run: podman-compose -f docker-compose.e2e.yml down
+      - name: Run E2E Tests - Azure
+        env:
+          TEST_RESULTS_DIR: playwright/test-results/azure-results
+          AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+        run: podman-compose -f docker-compose.e2e-azurite.yml up --pull-always --force-recreate --build --exit-code-from playwright
+      - name: Tear Down - File System
+        run: podman-compose -f docker-compose.e2e-azurite.yml down
       # - name: Run E2E Tests - Azure
       #   env:
       #     TEST_REPORT_JSON: azure-test-report.json
