--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -26,7 +26,8 @@ services:
       - CI=${CI}
       - SERVER_URL=http://upload-server:8082
       - UI_URL=http://upload-server:8083
+      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-./test-reports}
       - TEST_REPORT_JSON=fs-test-report.json
-      - TEST_RESULTS_DIR=./test-results/fs-results
+      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
     depends_on:
       - upload-server
