--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -50,9 +50,9 @@ jobs:
         env:
           TEST_RESULTS_DIR: playwright/test-results/azure-results
           AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-        run: podman-compose -f docker-compose.e2e-azurite.yml up --pull-always --force-recreate --build --exit-code-from playwright
+        run: podman-compose -f docker-compose.e2e-azure.yml up --pull-always --force-recreate --build --exit-code-from playwright
       - name: Tear Down - File System
-        run: podman-compose -f docker-compose.e2e-azurite.yml down
+        run: podman-compose -f docker-compose.e2e-azure.yml down
       # - name: Run E2E Tests - Azure
       #   env:
       #     TEST_REPORT_JSON: azure-test-report.json
