--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -31,6 +31,7 @@ jobs:
   e2e-tests:
     name: E2E Tests
     runs-on: ubuntu-latest
+    continue-on-error: true
     env:
       CI: true
       TEST_REPORTS_DIR: playwright/test-reports
@@ -41,18 +42,20 @@ jobs:
       # - name: Pull Images
       #   run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml pull
       - name: Run E2E Tests - File System
+        id: fsTest
         env:
           TEST_RESULTS_DIR: playwright/test-results/fs-results
-        run: podman-compose -f docker-compose.e2e.yml up --pull-always --force-recreate --build --exit-code-from playwright
+        run: podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright
       - name: Tear Down - File System
         run: podman-compose -f docker-compose.e2e.yml down
       - name: Run E2E Tests - Azure
+        id: azureTest
         env:
           TEST_RESULTS_DIR: playwright/test-results/azure-results
           AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-        run: podman-compose -f docker-compose.e2e-azure.yml up --pull-always --force-recreate --build --exit-code-from playwright
+        run: podman-compose -f docker-compose.e2e.azure.yml up --build --exit-code-from playwright
       - name: Tear Down - File System
-        run: podman-compose -f docker-compose.e2e-azure.yml down
+        run: podman-compose -f docker-compose.e2e.azure.yml down
       # - name: Run E2E Tests - Azure
       #   env:
       #     TEST_REPORT_JSON: azure-test-report.json
@@ -70,6 +73,8 @@ jobs:
           name: playwright
           path: playwright/
           retention-days: 30
+    outputs:
+     actualResult: ${{ steps.fsTest.conclusion == 'failure' || steps.azureTest.conclusion == 'failure' }}
   # simulation-test:
   #   needs: e2e-tests
   #   if: ${{ always() }}
