--- a/upload-server/docker-compose.e2e.azure.yml
+++ b/upload-server/docker-compose.e2e.azure.yml
@@ -1,50 +1,46 @@
 services:
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
-    hostname: azurite
-    restart: always
+    container_name: azurite-test
     ports:
-      - 10003:10000
-      - 10004:10001
-      - 10005:10002
+      - 10000:10000
+      - 10001:10001
+      - 10002:10002
   upload-server:
     image: golang:alpine
-    hostname: upload-server
+    container_name: upload-server-azurite
     volumes:
       - .:/code
       - ../upload-configs:/upload-configs
     working_dir: /code
     ports:
-      - 8084:8084
-      - 8085:8085
-    command: /bin/sh -c "./run-server.sh"
+      - 8082:8082
+      - 8083:8083
     environment:
-      - SERVER_HOSTNAME=upload-server
-      - SERVER_PORT=8084
-      - UI_PORT=8085
+      - SERVER_HOSTNAME=upload-server-azurite
+      - SERVER_PORT=8082
+      - UI_PORT=8083
       - AZURE_STORAGE_ACCOUNT=devstoreaccount1
       # Default test storage key can be found here https://github.com/Azure/Azurite?tab=readme-ov-file#default-storage-account
-      - AZURE_STORAGE_KEY=${AZURE_STORAGE_KEY}
-      - AZURE_ENDPOINT=http://azurite:10005/devstoreaccount1
+      - AZURE_STORAGE_KEY=${AZURITE_STORAGE_KEY}
+      - AZURE_ENDPOINT=http://azurite-test:10000/devstoreaccount1
       - TUS_AZURE_CONTAINER_NAME=test
       - DEX_DELIVERY_CONFIG_FILE
+    command: /bin/sh -c "./run-server.sh"
     depends_on:
       - azurite
   playwright:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
-    hostname: playwright
     volumes:
       - ../tests/smoke/playwright:/app
       - /app/node_modules
     working_dir: /app
-    command: /bin/sh -c "npm install; ./wait-for-it.sh http://upload-server:8085; npm test --workers=1"
     environment:
       - CI=${CI}
-      - SERVER_URL=http://upload-server:8084
-      - UI_URL=http://upload-server:8085
+      - SERVER_URL=http://upload-server-azurite:8082
+      - UI_URL=http://upload-server-azurite:8083
       - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-./test-reports}
       - TEST_REPORT_JSON=azure-test-report.json
       - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
-    depends_on:
-      - upload-server
+    command: /bin/sh -c "npm install; ./wait-for-it.sh http://upload-server-azurite:8083; npm test --workers=1"
    
