--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -1,3 +1,6 @@
+networks:
+  e2e-fs-network:
+
 services:
   upload-server:
     image: golang:alpine
@@ -6,14 +9,11 @@ services:
       - .:/code
       - ../upload-configs:/upload-configs
     working_dir: /code
-    ports:
-      - 8082:8082
-      - 8083:8083
     environment:
       - SERVER_HOSTNAME=upload-server-fs
-      - SERVER_PORT=8082
-      - UI_PORT=8083
     command: /bin/sh -c "./run-server.sh"
+    networks:
+      - e2e-fs-network
   playwright:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     container_name: playwright-fs
@@ -23,9 +23,11 @@ services:
     working_dir: /app
     environment:
       - CI=${CI}
-      - SERVER_URL=http://upload-server-fs:8082
-      - UI_URL=http://upload-server-fs:8083
+      - SERVER_URL=http://upload-server-fs:8080
+      - UI_URL=http://upload-server-fs:8081
       - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-./test-reports}
       - TEST_REPORT_JSON=fs-test-report.json
       - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
     command: /bin/sh -c "npm install; ./wait-for-it.sh $$UI_URL; npm test --workers=1"
+    networks:
+      - e2e-fs-network
