--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -34,7 +34,7 @@ jobs:
     continue-on-error: true
     env:
       CI: true
-      TEST_REPORTS_DIR: ./playwright/test-reports
+      TEST_REPORTS_DIR: ./playwright-output/test-reports
     steps:
       - uses: actions/checkout@v4
       - name: Install podman compose
@@ -44,14 +44,14 @@ jobs:
       - name: Run E2E Tests - File System
         id: fsTest
         env:
-          TEST_RESULTS_DIR: ./playwright/test-results/fs-results
+          TEST_RESULTS_DIR: ./playwright-output/test-results/fs-results
         run: podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright
       - name: Tear Down - File System
         run: podman-compose -f docker-compose.e2e.yml down
       - name: Run E2E Tests - Azure
         id: azureTest
         env:
-          TEST_RESULTS_DIR: ./playwright/test-results/azure-results
+          TEST_RESULTS_DIR: ./playwright-output/test-results/azure-results
           AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
         run: podman-compose -f docker-compose.e2e.azure.yml up --build --exit-code-from playwright
       - name: Tear Down - Azure
@@ -59,7 +59,7 @@ jobs:
       - name: Run E2E Tests - AWS
         id: awsTest
         env:
-          TEST_RESULTS_DIR: ./playwright/test-results/aws-results
+          TEST_RESULTS_DIR: ./playwright-output/test-results/aws-results
         run: podman-compose -f docker-compose.e2e.aws.yml up --build --exit-code-from playwright
       - name: Tear Down - AWS
         run: podman-compose -f docker-compose.e2e.aws.yml down
@@ -67,25 +67,23 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: playwright
-          path: ./playwright
+          path: ../tests/smoke/playwright/playwright-output
           retention-days: 30
     outputs:
      actualResult: ${{ steps.fsTest.conclusion == 'failure' || steps.azureTest.conclusion == 'failure' || steps.awsTest.conclusion == 'failure' }}
-  # simulation-test:
-  #   needs: e2e-tests
-  #   if: ${{ always() }}
-  #   name: Simulation Test
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Install podman compose
-  #       run: pip3 install podman-compose
-  #     - name: Run Tests
-  #       run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
-  #     - name: Show coverage
-  #       run: go tool cover -func=c.out
+  simulation-test:
+    name: Simulation Test
+    runs-on: ubuntu-latest
+    env:
+      AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install podman compose
+        run: pip3 install podman-compose
+      - name: Run Tests
+        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
+      - name: Show coverage
+        run: go tool cover -func=c.out
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
