--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -28,49 +28,6 @@ jobs:
         run: go tool cover -func=c.out
       - name: Build Check
         run: go build -o upload-server ./cmd/main.go
-  e2e-tests:
-    name: E2E Tests
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      CI: true
-      TEST_REPORTS_DIR: ./playwright-output/test-reports
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install podman compose
-        run: pip3 install podman-compose
-      # - name: Pull Images
-      #   run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml pull
-      - name: Run E2E Tests - File System
-        id: fsTest
-        env:
-          TEST_RESULTS_DIR: ./playwright-output/test-results/fs-results
-        run: podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright
-      - name: Tear Down - File System
-        run: podman-compose -f docker-compose.e2e.yml down
-      - name: Run E2E Tests - Azure
-        id: azureTest
-        env:
-          TEST_RESULTS_DIR: ./playwright-output/test-results/azure-results
-          AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-        run: podman-compose -f docker-compose.e2e.azure.yml up --build --exit-code-from playwright
-      - name: Tear Down - Azure
-        run: podman-compose -f docker-compose.e2e.azure.yml down
-      - name: Run E2E Tests - AWS
-        id: awsTest
-        env:
-          TEST_RESULTS_DIR: ./playwright-output/test-results/aws-results
-        run: podman-compose -f docker-compose.e2e.aws.yml up --build --exit-code-from playwright
-      - name: Tear Down - AWS
-        run: podman-compose -f docker-compose.e2e.aws.yml down
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: playwright
-          path: ../tests/smoke/playwright/playwright-output
-          retention-days: 30
-    outputs:
-     actualResult: ${{ steps.fsTest.conclusion == 'failure' || steps.azureTest.conclusion == 'failure' || steps.awsTest.conclusion == 'failure' }}
   simulation-test:
     name: Simulation Test
     runs-on: ubuntu-latest
@@ -84,6 +41,53 @@ jobs:
         run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
       - name: Show coverage
         run: go tool cover -func=c.out
+  e2e-tests:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    needs: simulation-test
+    if: ${{ always() }}
+    env:
+      CI: true
+      TEST_REPORTS_DIR: ./playwright-output/test-reports
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install podman compose
+        run: pip3 install podman-compose
+      - name: Pull Images
+        run: podman-compose -f docker-compose.e2e.yml -f docker-compose.e2e.azure.yml -f docker-compose.e2e.aws.yml pull --include-deps --policy "always"
+      - name: Run E2E Tests - File System
+        id: fsTest
+        env:
+          TEST_RESULTS_DIR: ./playwright-output/test-results/fs-results
+        run: podman-compose -f docker-compose.e2e.yml up --pull "never" --build --exit-code-from playwright
+      - name: Stop - File System
+        run: podman-compose -f docker-compose.e2e.yml stop
+      - name: Run E2E Tests - Azure
+        id: azureTest
+        env:
+          TEST_RESULTS_DIR: ./playwright-output/test-results/azure-results
+          AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+        run: podman-compose -f docker-compose.e2e.azure.yml up --pull "never" --build --exit-code-from playwright
+      - name: Stop - Azure
+        run: podman-compose -f docker-compose.e2e.azure.yml stop
+      - name: Run E2E Tests - AWS
+        id: awsTest
+        env:
+          TEST_RESULTS_DIR: ./playwright-output/test-results/aws-results
+        run: podman-compose -f docker-compose.e2e.aws.yml up --pull "never" --build --exit-code-from playwright
+      - name: Stop - AWS
+        run: podman-compose -f docker-compose.e2e.aws.yml stop
+      - name: Tear Down Containers
+        run: podman-compose -f docker-compose.e2e.yml -f docker-compose.e2e.azure.yml -f docker-compose.e2e.aws.yml down
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright
+          path: ../tests/smoke/playwright/playwright-output
+          retention-days: 30
+    outputs:
+     actualResult: ${{ steps.fsTest.conclusion == 'failure' || steps.azureTest.conclusion == 'failure' || steps.awsTest.conclusion == 'failure' }}
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
